// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultCard(GOOD_PROGRAM) matches snapshot. 1`] = `
<div
  className="MuiPaper-root MuiCard-root ParallelCard MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
      >
        Interpretation Result
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root"
  >
    <div>
      <div
        className="ColoredResult GoodResult"
      >
        <h3>
          Program Running Result
        </h3>
        <pre>
          result
        </pre>
      </div>
      <div
        className="ColoredResult GoodResult"
      >
        <h3>
          Program Standard Out
        </h3>
        <pre>
          printed
        </pre>
      </div>
      <div
        className="ColoredResult"
        style={
          Object {
            "borderLeftColor": "green",
          }
        }
      >
        <h3>
          Pretty Printed Program:
        </h3>
        <pre
          className="prism-code language-samlang CodeBlock"
          style={
            Object {
              "backgroundColor": "#f7f7f7",
            }
          }
        >
          <div
            className="token-line"
            style={
              Object {
                "backgroundColor": null,
              }
            }
          >
            <span
              className="token keyword"
              style={
                Object {
                  "color": "rgb(62, 122, 226)",
                }
              }
            >
              class
            </span>
            <span
              className="token plain"
            >
               
            </span>
            <span
              className="token class-name"
              style={
                Object {
                  "color": "rgb(154, 48, 173)",
                }
              }
            >
              Main
            </span>
            <span
              className="token plain"
            >
               {}
            </span>
          </div>
        </pre>
      </div>
      <div
        className="ColoredResult NeutralResult"
      >
        <h3>
          Optimized Assembly
        </h3>
        <code>
          <p>
            assembly
          </p>
        </code>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResultCard(WITH_ERROR) matches snapshot. 1`] = `
<div
  className="MuiPaper-root MuiCard-root ParallelCard MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
      >
        Interpretation Result
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root"
  >
    <div>
      <div
        className="ColoredResult BadResult"
      >
        <h3>
          Compile Time Errors
        </h3>
        <code>
          <p>
            ahhh
          </p>
        </code>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResultCard(null) matches snapshot. 1`] = `
<div
  className="MuiPaper-root MuiCard-root ParallelCard MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
      >
        Interpretation Result
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root"
  >
    Submit a program to see the interpretation result.
  </div>
</div>
`;

exports[`ResultCard(server-error) matches snapshot. 1`] = `
<div
  className="MuiPaper-root MuiCard-root ParallelCard MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
      >
        Interpretation Result
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root"
  >
    <div>
      <div
        className="ColoredResult"
        style={
          Object {
            "borderLeftColor": "red",
          }
        }
      >
        <h3>
          Interpreter Error
        </h3>
        <code>
          server-error
        </code>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResultCard(waiting) matches snapshot. 1`] = `
<div
  className="MuiPaper-root MuiCard-root ParallelCard MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="MuiCardHeader-root"
  >
    <div
      className="MuiCardHeader-content"
    >
      <span
        className="MuiTypography-root MuiCardHeader-title MuiTypography-h5 MuiTypography-displayBlock"
      >
        Interpretation Result
      </span>
    </div>
  </div>
  <div
    className="MuiCardContent-root"
  >
    <div>
      <div
        className="ColoredResult"
        style={
          Object {
            "borderLeftColor": "red",
          }
        }
      >
        <h3>
          Interpreter Error
        </h3>
        <code>
          waiting
        </code>
      </div>
    </div>
  </div>
</div>
`;
